fix: skip negative scale checks for creating decimals